.metadata/.plugins/org.eclipse.cdt.ui/GPIO1.build.log
19:28:48 **** Incremental Build of configuration Debug for project GPIO1 ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:159:35: error: '\U0001f60e' undeclared (first use in this function)
  159 |           else if (ButtonState == ð???
      |                                   ^~
../Core/Src/main.c:159:35: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:159:37: error: expected ')' before '{' token
  159 |           else if (ButtonState == ð???
      |                   ~                 ^
      |                                     )
  160 |                           {
      |                           ~          
../Core/Src/main.c:249:3: error: expected expression before '}' token
  249 |   }
      |   ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.

19:28:49 Build Failed. 4 errors, 0 warnings. (took 247ms)

